# opty-Project-PI-IV-Turma_1

./: README.md
deploy/: .env.example
front-end/: .env.example  .gitignore  package-lock.json  package.json
front-end/src/: App.tsx
front-end/src/components/: ChatMessage.tsx  DashboardNav.tsx  Footer.tsx  GuestRoute.tsx  ProtectedRoute.tsx  RequireRole.tsx
front-end/src/contexts/: AuthContext.t.tsx  AuthContext.tsx
front-end/src/hooks/: useAuth.ts  useClientChat.ts
front-end/src/pages/: ChatCliente.tsx  ChatSupervisor.tsx  Configuracoes.tsx  Cookies.tsx  Dashboard.tsx  ForgotPassword.tsx  Login.tsx  Perfil.tsx  Privacidade.tsx  Register.tsx  ResetPassword.tsx  Resultados.tsx  Sobre.tsx  Termos.tsx
front-end/src/services/: api.ts  supabase.ts
front-end/src/types/: user.tsx
java-client/scripts/: run.sh
java-server/src/main/java/com/opty/socket/: OptiSocketApplication.java
java-server/src/main/resources/: application.yml
python-api/: .copier-answers.yml  .env.example  README.md  pyproject.toml
python-api/opty_api/: app.py  events.py  main.py  models.py
python-api/opty_api/mongo/repositories/: refresh_tokens.py
python-api/opty_api/routers/: __init__.py  auth.py  search.py
python-api/opty_api/schemas/: mercadolivre.py  product.py  refresh_token.py
python-api/opty_api/schemas/auth/forgot_password/: endpoint.py
python-api/opty_api/services/: mercadolivre.py
python-api/opty_api/services/auth/: forgot_password.py  login.py  refresh.py
python-api/opty_api/utils/: auth.py
python-api/tests/unit/: __init__.py
