[tool.poetry]
name = "opty_api"
version = "0.1.0"
description = "This is a REST API backend for OPTY project"
authors = ["Eduardo Kairalla"]
packages = [{include = "opty_api"}]
include = ["pyproject.lock"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = "^0.116.1"
pydantic = {extras = ["email"], version = "^2.7.3"}
pydantic-settings = "^2.10.1"
uvicorn = "^0.35.0"
supabase = "^2.0.0"
pymongo = "^4.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pylint_exit = "^1.2.0"
isort = "^6.0.1"
